--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <a href="#" class="nav-item nav-link active">Home</a>
                     <!-- <a href="#" class="nav-item nav-link" >Products</a> -->
                     <a href="#" class="nav-item nav-link" >Login</a>
-                    <a href="#" class="nav-item nav-link" >SignUp</a>
+                    <a href="signup.html" class="nav-item nav-link" >SignUp</a>
                     <a href="products.html" class="nav-item nav-link" >Products</a>
                 
-                    <a href="#" class="nav-item nav-link" >Cart</a>
+                    <a href="portfolio.html" class="nav-item nav-link" >Portfolio</a>
 
                     <form action="" class="form-group d-flex" style="float:right"></form>
                     <input type="text" name="" id="" placeholder="Search" class="form-control"> <i class="bi-search"></i>
