--- a/products.html
+++ b/products.html
@@ -37,9 +37,9 @@
                     <a href="#" class="nav-item nav-link" >Login</a>
                     
                     <a href="signup.html" class="nav-item nav-link" >SignUp</a>
-                    <a href="#" class="nav-item nav-link active" >Products</a>
+                    <a href="products.html" class="nav-item nav-link active" >Products</a>
                 
-                    <a href="#" class="nav-item nav-link" >Cart</a>
+                    <a href="portfolio.html" class="nav-item nav-link" >Portfolio</a>
 
                     <form action="" class="form-group d-flex" style="float:right"></form>
                     <input type="text" name="" id="" placeholder="Search" class="form-control"> <span><i class="fa fa-search"></i></span>
@@ -63,7 +63,7 @@
     <!-- A card combines images and ints contents on one item -->
     <!-- card , card-body -->
     <div class="conatiner-fluid bg-secondary">
-
+        <!-- style="border-radius:50px" -->
         <!-- Grid system to layout the product page -->
         <section class="row">
 
@@ -293,6 +293,7 @@
                 </section>
 
             </div>
+            <hr>
 
         </footer>
 
